--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,8 +1,9 @@
 <%- include('header') %>
-<form method="GET" action="/cotacao">
-  <input type="text" name='cotacao' placeholder="Cotação Dólar" value="<%= dollar.toFixed(2) %>"/> <br />
-  <input type="text" name='quantidade' placeholder="Quantidade de Dólares"> <br />
-  <button>Converter!</button>
-</form>
-<span>*Dados da api do Banco Central disponível <a href='https://dadosabertos.bcb.gov.br/dataset/dolar-americano-usd-todos-os-boletins-diarios/resource/ae69aa94-4194-45a6-8bae-12904af7e176'>aqui</a></span>
-<%- include('footer') %>
+  <form method="GET" action="/cotacao">
+    <input type="text" name='cotacao' placeholder="Cotação Dólar" /> <br />
+    <input type="text" name='quantidade' placeholder="Quantidade de Dólares"> <br />
+    <button>Converter!</button>
+  </form>
+  <span>*Dados da api do Banco Central disponível <a
+      href='https://dadosabertos.bcb.gov.br/dataset/dolar-americano-usd-todos-os-boletins-diarios/resource/ae69aa94-4194-45a6-8bae-12904af7e176'>aqui</a></span>
+  <%- include('footer') %>
