--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,6 @@
 <%- include('header') %>
   <form method="GET" action="/cotacao">
-    <input type="text" name='cotacao' placeholder="Cotação Dólar" /> <br />
+    <input type="text" name='cotacao' placeholder="Cotação Dólar" value='<%= cotacao %>'/> <br />
     <input type="text" name='quantidade' placeholder="Quantidade de Dólares"> <br />
     <button>Converter!</button>
   </form>
